--- a/video.html
+++ b/video.html
@@ -42,12 +42,12 @@
         </iframe>
         <div class="yt">
           <a href="https://youtu.be/6nCOrCqnZWM" target="_blank"
-            ><button class="btn">Link to video 1</button></a
+            ><button class="btn">Link to video- 1</button></a
           >
         </div>
         <div class="yt">
           <a href="https://youtu.be/OcOeEFbP4Ao" target="_blank"
-            ><button class="btn">Link to video 2</button></a
+            ><button class="btn">Link to video- 2</button></a
           >
         </div>
 
